fix: Fix overflow-x issue with social icons section

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -26,7 +26,6 @@
 .contact-sections {
 	display: flex;
 	flex-wrap: wrap;
-	max-width: 100vw;
 }
 
 .social-container {
@@ -42,22 +41,15 @@
 
 .contact-about-container {
 	flex: 1 1 45%;
-	min-width: 22rem;
+	min-width: 15rem;
 	margin: 0 1rem 1rem 1rem;
 }
 
 .contact-about {
 	padding: 0.5rem 1rem;
-
 	background: hsla(0, 0%, 0%, 0.45);
 	text-align: left;
 }
 
 @media (max-width: 520px) {
-	.contact-about {
-		min-width: 16rem;
-	}
-	.social-container {
-		padding: 0.5rem;
-	}
 }
